--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-client-session": "^0.0.8",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-identity": "^0.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
